# universal-rag-copilot

./: .gitignore  Makefile  README.md  REPORT.md  pyproject.toml
audits/: AUDIT_EXPERT_REPORT.md
audits/audit 110326/: MACHINE_READABLE_SUMMARY.json  PROJECT_AUDIT.md  TERMINAL_EVIDENCE.md
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  DEMO_SCENARIOS.md  EVAL_PLAN.md  MODES_AND_PROFILES.md  PRD.md  PROJECT_MAP.md  SCOPE.md
fixtures/academic_pdf/: neural_networks_basics.md  optimization_intro.md  probability_for_ml.md
fixtures/eval/: cases.json
fixtures/support_kb/: account_access_security.md  billing_and_invoices.md  returns_and_refunds.md
reports/: HARDENING_SPRINT_SUMMARY.md  REPORT.md
src/universal_rag_copilot/: __init__.py  __main__.py  config.py  pipeline.py
src/universal_rag_copilot/answering/: __init__.py  composer.py
src/universal_rag_copilot/api/: __init__.py  app.py  ui_page.py
src/universal_rag_copilot/chunking/: __init__.py  strategies.py
src/universal_rag_copilot/domain/: __init__.py  models.py
src/universal_rag_copilot/evaluation/: __init__.py  runner.py
src/universal_rag_copilot/ingestion/: __init__.py  local_ingestion.py
src/universal_rag_copilot/retrieval/: __init__.py  baseline.py  pipeline.py
src/universal_rag_copilot/ui/: __init__.py  cli.py
tests/: test_api.py  test_chunking.py  test_evaluation_runner.py  test_retrieval_answering.py
