[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-rag-copilot"
version = "0.1.0"
description = "Local-first, multi-mode Stage 1 RAG vertical slice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
urc = "universal_rag_copilot.ui.cli:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
