[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-rag-copilot"
version = "0.1.0"
description = "Local-first, multi-mode Stage 1 RAG vertical slice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
urc = "universal_rag_copilot.ui.cli:run_cli"
urc-api = "universal_rag_copilot.api.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
